--- a/GestionNote/MainWindow.xaml
+++ b/GestionNote/MainWindow.xaml
@@ -4,10 +4,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GestionNote"
+        xmlns:view="clr-namespace:GestionNote.view"
         mc:Ignorable="d"
         Title="Gestion des Notes" Height="450" Width="800">
     <Grid Name="mainGrid">
         <Label Content="Gestion des notes" HorizontalAlignment="Left" Margin="302,10,0,0" VerticalAlignment="Top" Width="153" FontSize="18" RenderTransformOrigin="0.5,0.5"/>
-        <local:connection></local:connection>
+        <view:Connection x:Name="connect" Visibility="Visible"></view:Connection>
+        <view:studentControl x:Name="student" Visibility="Collapsed"></view:studentControl>
+        <view:teacherControl x:Name="teacher" Visibility="Collapsed"></view:teacherControl>
     </Grid>
 </Window>
