--- a/GestionNote/MainWindow.xaml
+++ b/GestionNote/MainWindow.xaml
@@ -11,6 +11,6 @@
         <Label Content="Gestion des notes" HorizontalAlignment="Left" Margin="302,10,0,0" VerticalAlignment="Top" Width="153" FontSize="18" RenderTransformOrigin="0.5,0.5"/>
         <view:Connection x:Name="connect" Visibility="Visible"></view:Connection>
         <view:studentControl x:Name="student" Visibility="Collapsed"></view:studentControl>
-        <view:teacherControl x:Name="teacher" Visibility="Collapsed"></view:teacherControl>
+        <view:TeacherControl x:Name="Teacher" Visibility="Collapsed"></view:TeacherControl>
     </Grid>
 </Window>
