--- a/GestionNote/view/studentControl.xaml
+++ b/GestionNote/view/studentControl.xaml
@@ -1,12 +1,13 @@
-﻿<UserControl x:Class="GestionNote.view.studentControl"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:System="clr-namespace:System;assembly=mscorlib"
+             xmlns:Classes="clr-namespace:GestionNote.Classes" x:Class="GestionNote.view.studentControl"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" Background="White">
-    <Grid Name="studControl">
+    <Grid x:Name="studControl">
         <Label Content="Nom : " HorizontalAlignment="Left" Margin="268,31,0,0" VerticalAlignment="Top" Width="185" x:Name="NameUser"/>
         <Label Content="Classe : " HorizontalAlignment="Left" Margin="453,31,0,0" VerticalAlignment="Top" Width="97" x:Name="ClassUser"/>
         <ComboBox x:Name="MatiereUser" HorizontalAlignment="Left" Margin="630,35,0,0" VerticalAlignment="Top" Width="120" SelectedIndex="0">
