--- a/GestionNote/view/studentControl.xaml
+++ b/GestionNote/view/studentControl.xaml
@@ -8,15 +8,20 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" Background="White">
     <Grid x:Name="studControl">
-        <Label Content="Nom : " HorizontalAlignment="Left" Margin="268,31,0,0" VerticalAlignment="Top" Width="185" x:Name="NameUser"/>
-        <Label Content="Classe : " HorizontalAlignment="Left" Margin="453,31,0,0" VerticalAlignment="Top" Width="97" x:Name="ClassUser"/>
-        <ComboBox x:Name="MatiereUser" HorizontalAlignment="Left" Margin="630,35,0,0" VerticalAlignment="Top" Width="120" SelectedIndex="0">
+        <Label Content="Nom : " HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="185" x:Name="NameUser"/>
+        <Label Content="Classe : " HorizontalAlignment="Left" Margin="670,10,0,0" VerticalAlignment="Top" Width="97" x:Name="ClassUser"/>
+        <Label Content="Âge : " HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" Width="185" x:Name="AgeUser"/>
+        <ComboBox x:Name="MatiereUser" HorizontalAlignment="Left" Margin="670,43,0,0" VerticalAlignment="Top" Width="120" SelectedIndex="0">
             <System:String>Matiere</System:String>
+            <Classes:MatiereEnum>Français</Classes:MatiereEnum>
+            <Classes:MatiereEnum>Mathématiques</Classes:MatiereEnum>
+            <Classes:MatiereEnum>Anglais</Classes:MatiereEnum>
         </ComboBox>
-        <DataGrid AutoGenerateColumns="False"  Margin="0,121,0,10">
+        <DataGrid AutoGenerateColumns="False"  Margin="10,97,10,24" Name="NotesDataGrid" SelectedIndex="0">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Matière"  FontFamily="Arial" FontStyle="Italic" Width="*"/>
-                <DataGridTextColumn Header="Notes"  FontFamily="Arial" FontWeight="Bold" Width="*"/>
+                <DataGridTextColumn Header="Matière"  FontFamily="Arial" FontStyle="Italic" Width="0.25*"/>
+                <DataGridTextColumn Header="Moyenne"  FontFamily="Arial" FontStyle="Italic" Width="125"/>
+                <DataGridTextColumn Header="Notes"  FontFamily="Arial" FontWeight="Bold" Width="0.25*"/>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
